src/Resources/app/storefront/src/scss/base.scss
img[data-blurhash] {
  &:not([data-ecb-bh]) {
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-origin: content-box;
    border: 1px dotted rgba(204, 204, 204, .5);
    background-image: url('../../../bundles/eyecookblurhash/storefront/assets/images/ecb-spinner.svg');
  }
}

@keyframes ecbShine {
  to {
    background-position-x: -200%;
  }
}

.ecb-loading {
  overflow: hidden;

  &:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 1;
    background: transparent;
    background: linear-gradient(110deg, transparent 8%, rgba(239, 239, 239, 0.15) 18%, transparent 33%);
    background-size: 200% 100%;
    animation: 1.5s ecbShine linear infinite;
  }
}

